k8s/blackjack-namespace.yml
apiVersion: v1

kind: Namespace
metadata:
  name: blackjack
  labels:
    name: blackjack
