k8s/preact-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: blackjack-frontend-lb
  namespace: blackjack
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: blackjack-preact-frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackjack-preact-frontend
  labels:
    name: blackjack-preact-frontend
spec:
  selector:
    matchLabels:
      app: blackjack-preact-frontend
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: blackjack-preact-frontend
    spec:
      containers:
        - image: helloitsjoe/blackjack-preact-frontend:3.0-minikube
          imagePullPolicy: Always
          name: blackjack-preact-frontend
          ports:
            - containerPort: 80
          # Re-enable these if you're using a ConfigMapper for nginx instead of Ingress
          # volumeMounts:
          #   - name: frontend-config
          #     mountPath: /etc/nginx/conf.d/default.conf
          #     subPath: default.conf
      # volumes:
      #   - name: frontend-config
      #     configMap:
      #       name: frontend-config
