k8s/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: blackjack
spec:
  type: LoadBalancer
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:6
          imagePullPolicy: IfNotPresent
          name: redis
          ports:
            - containerPort: 6379
