k8s/service-python-backend.yml
# Separate service/deployment configs for backend to allow
# updates to deployment without changing service
apiVersion: v1
kind: Service
metadata:
  name: blackjack-backend-lb
  namespace: blackjack
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: blackjack-python-backend
